# directadmin-cli

./: .gitignore  README.md  pyproject.toml
src/directadmin/: base.py  client.py  endpoints.py
