[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/venv",
  "/.venv",
  "/dist",
  "/build",
  "/.git",
  "/.github",
  "__pycache__",
  "*.pyc",
  ".DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["src/directadmin"]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]


[project]
name = "directadmin-cli"
version = "0.1.6"
description = "Command-line interface for DirectAdmin written in Python — provides API-driven automation and utilities for server, user, domain, and DNS management."
authors = [
    {"name" = "Milad Khoshdel", "email" = "miladkhoshdel@gmail.com"}
]
maintainers = [
    {"name" = "Milad Khoshdel", "email" = "miladkhoshdel@gmail.com"}
]
readme = "README.md"
dependencies = [
  "requests"
]
keywords = ["directadmin", "da"]
requires-python = ">= 3.8"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/Miladkhoshdel/directadmin-cli"
Issues = "https://github.com/Miladkhoshdel/directadmin-cli/issues"
